--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reactbit",
+  "backend_url": "http://localhost:8000",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,15 +11,32 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-avatar": "^1.1.8",
+    "@radix-ui/react-dropdown-menu": "^2.1.13",
+    "@radix-ui/react-label": "^2.1.5",
+    "@radix-ui/react-separator": "^1.1.5",
+    "@radix-ui/react-slot": "^1.2.1",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.1",
+    "axios": "^1.9.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.507.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.2",
     "react-hot-toast": "^2.5.2",
-    "tailwindcss": "^4.1.5"
+    "react-router-dom": "^7.5.3",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.5",
+    "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@types/node": "^22.15.3",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
@@ -26,6 +44,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "tw-animate-css": "^1.2.9",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
     "vite": "^6.3.1"
