--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@radix-ui/react-avatar": "^1.1.8",
     "@radix-ui/react-dropdown-menu": "^2.1.13",
     "@radix-ui/react-label": "^2.1.5",
+    "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-separator": "^1.1.5",
-    "@radix-ui/react-slot": "^1.2.1",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.11",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.1",
     "axios": "^1.9.0",
