--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "reactbit",
-  "backend_url": "https://reactbit.pythonanywhere.com",
+  "backend_url": "http://127.0.0.1:8000",
   "private": true,
   "version": "0.0.0",
   "type": "module",
