fixed socket backend host

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "reactbit",
   "backend_url": "https://reactbit-backend.onrender.com",
+  "backend_host": "reactbit-backend.onrender.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
